--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>pherialize</artifactId>
   <packaging>jar</packaging>
   <name>Pherialize</name>
-  <version>1.3.0</version>
+  <version>1.3.1-SNAPSHOT</version>
   <description>
     Library for serializing Java objects into the
     PHP serializing format and unserializing data from
