--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
   <artifactId>pherialize</artifactId>
   <packaging>jar</packaging>
   <name>Pherialize</name>
-  <version>1.2.4-SNAPSHOT</version>
+  <version>1.2.4</version>
   <description>
     Library for serializing Java objects into the
     PHP serializing format and unserializing data from
     this format back into Java objects.
   </description>
   <inceptionYear>2006</inceptionYear>
-  <url>http://kayahr.github.com/${project.artifactId}/</url>
+  <url>https://github.com/karlvr/${project.artifactId}</url>
   <organization>
     <name>Klaus Reimer</name>
     <url>http://www.ailis.de/~k/</url>
@@ -47,14 +47,14 @@
   </properties>
   
   <scm>
-    <connection>scm:git:git://github.com/kayahr/${project.artifactId}.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/kayahr/${project.artifactId}.git</developerConnection>
-    <url>http://github.com/kayahr/${project.artifactId}</url>
+    <connection>scm:git:git://github.com/karlvr/${project.artifactId}.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/karlvr/${project.artifactId}.git</developerConnection>
+    <url>http://github.com/karlvr/${project.artifactId}</url>
   </scm>
        
   <issueManagement>
     <system>GitHub</system>
-    <url>https://github.com/kayahr/${project.artifactId}/issues</url>
+    <url>https://github.com/karlvr/${project.artifactId}/issues</url>
   </issueManagement>
   
   <build>
@@ -72,37 +72,7 @@
       </plugin>
       
     </plugins>
-  </build>  
-  
-  <repositories>
-    <repository>
-      <id>ailis-releases</id>
-      <name>Ailis Maven Releases</name>
-      <url>http://nexus.ailis.de/content/groups/public/</url>
-      <releases><enabled>true</enabled></releases>
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
-    <repository> 
-      <id>ailis-snapshots</id>
-      <name>Ailis Maven Snapshots</name>
-      <url>http://nexus.ailis.de/content/groups/public-snapshots/</url>
-      <releases><enabled>false</enabled></releases>
-      <snapshots><enabled>true</enabled></snapshots>
-    </repository>
-  </repositories>
-
-  <distributionManagement>
-    <repository>
-      <id>ailis-releases</id>
-      <name>Ailis Maven Releases</name>
-      <url>http://nexus.ailis.de/content/repositories/releases</url>
-    </repository>
-    <snapshotRepository>
-      <id>ailis-snapshots</id>
-      <name>Ailis Maven Snapshots</name>
-      <url>http://nexus.ailis.de/content/repositories/snapshots</url>
-    </snapshotRepository>    
-  </distributionManagement>
+  </build>
   
   <dependencies>
     <dependency>
