--- a/pom.xml
+++ b/pom.xml
@@ -1,85 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  
-  <groupId>de.ailis.pherialize</groupId>
-  <artifactId>pherialize</artifactId>
-  <packaging>jar</packaging>
-  <name>Pherialize</name>
-  <version>1.2.4</version>
-  <description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>com.xk72</groupId>
+	<artifactId>pherialize</artifactId>
+	<packaging>jar</packaging>
+	<name>Pherialize</name>
+	<version>1.2.4</version>
+	<description>
     Library for serializing Java objects into the
     PHP serializing format and unserializing data from
     this format back into Java objects.
   </description>
-  <inceptionYear>2006</inceptionYear>
-  <url>https://github.com/karlvr/${project.artifactId}</url>
-  <organization>
-    <name>Klaus Reimer</name>
-    <url>http://www.ailis.de/~k/</url>
-  </organization>
-  
-  <licenses>
-    <license>
-      <name>MIT License</name>
-      <url>LICENSE.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-    
-  <developers>
-    <developer>
-      <id>k</id>
-      <name>Klaus Reimer</name>
-      <email>k@ailis.de</email>
-      <roles>
-        <role>Developer</role>
-      </roles>
-      <timezone>+1</timezone>
-      <url>http://www.ailis.de/~k/</url>
-    </developer>        
-  </developers>
+	<inceptionYear>2006</inceptionYear>
+	<url>https://github.com/karlvr/${project.artifactId}</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <releasesUrl>http://nexus.ailis.de/content/repositories/releases/de/ailis/${project.artifactId}/${project.artifactId}/${project.version}</releasesUrl>
-    <snapshotsUrl>http://nexus.ailis.de/content/repositories/snapshots/de/ailis/${project.artifactId}/${project.artifactId}</snapshotsUrl>
-  </properties>
-  
-  <scm>
-    <connection>scm:git:git://github.com/karlvr/${project.artifactId}.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/karlvr/${project.artifactId}.git</developerConnection>
-    <url>http://github.com/karlvr/${project.artifactId}</url>
-  </scm>
-       
-  <issueManagement>
-    <system>GitHub</system>
-    <url>https://github.com/karlvr/${project.artifactId}/issues</url>
-  </issueManagement>
-  
-  <build>
-    <plugins>
-    
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <encoding>${project.build.sourceEncoding}</encoding>
-        </configuration>
-      </plugin>
-      
-    </plugins>
-  </build>
-  
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>LICENSE.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>k</id>
+			<name>Klaus Reimer</name>
+			<email>k@ailis.de</email>
+			<roles>
+				<role>Developer</role>
+			</roles>
+			<timezone>+1</timezone>
+			<url>http://www.ailis.de/~k/</url>
+		</developer>
+		<developer>
+			<name>Karl von Randow</name>
+			<email>karl@xk72.com</email>
+			<organization>XK72</organization>
+			<organizationUrl>http://xk72.com</organizationUrl>
+		</developer>
+	</developers>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<scm>
+		<connection>scm:git:git://github.com/karlvr/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/karlvr/${project.artifactId}.git</developerConnection>
+		<url>http://github.com/karlvr/${project.artifactId}</url>
+	</scm>
+
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/karlvr/${project.artifactId}/issues</url>
+	</issueManagement>
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
